refactoring mappers